--- a/pagina cadastro/cadastro.html
+++ b/pagina cadastro/cadastro.html
@@ -6,12 +6,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brilha Sol</title>
-    <link rel="stylesheet" href="CSS/cabeçalho.css">
-    <link rel="stylesheet" href="CSS/cadastro.css">
-    <link rel="stylesheet" href="CSS/darkMode.css">
-    <link
-      rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-    <link rel="shortcut icon" href="assets/favicon.ico">
+    <link rel="stylesheet" href="/pagina cadastro/css/cabecalho.css">
+    <link rel="stylesheet" href="/pagina cadastro/css/cadastro.css">
+    <link rel="stylesheet" href="/pagina cadastro/css/darkMode.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+    <link rel="shortcut icon" href="/pagina principal/assets/favicon.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 
 </head>
 
@@ -21,7 +22,7 @@
 
         <nav class="list-nav">
 
-            <img src="assets/logo.png" width="300px" alt="Logo">
+            <img src="/pagina principal/assets/logo.png" width="300px" alt="Logo">
 
             <li><button class="btn-more-info">Sobre nós</button></li>
             <!-- <li><button class="btn-more-info">Seja Voluntário</button></li> -->
@@ -87,9 +88,9 @@
        
 
         <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
-        <script src="./JS/cadastro.js"></script>
+        <script src="/pagina cadastro/js/cadastro.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
-        <script src="JS/darkMode.js"></script>
+        <script src="/pagina cadastro/js/darkMode.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
 
 
@@ -99,7 +100,7 @@
     <footer>
 
         <div class="footer-content">
-            <img class="img-footer" src="assets/logo.png" width="200px" height="50px" alt="Logo">
+            <img class="img-footer" src="/pagina principal/assets/logo.png" width="200px" height="50px" alt="Logo">
             <p id="p-footer">Desenvolvido pela <strong>Squad 2</strong> como projeto final para o M2 para a <a
                     href="https://programadoresdoamanha.org/" target="_blank">Programadores do Amanhã</a></p>
         </div>
