--- a/pagina cadastro/cadastro.html
+++ b/pagina cadastro/cadastro.html
@@ -101,8 +101,8 @@
 
         <div class="footer-content">
             <img class="img-footer" src="/pagina principal/assets/logo.png" width="200px" height="50px" alt="Logo">
-            <p id="p-footer">Desenvolvido pela <strong>Squad 2</strong> como projeto final para o M2 para a <a
-                    href="https://programadoresdoamanha.org/" target="_blank">Programadores do Amanhã</a></p>
+            <p id="p-footer">Desenvolvido pela <strong>Squad 2</strong> como projeto final do M2 para a <a
+                href="https://programadoresdoamanha.org/" target="_blank">Programadores do Amanhã</a></p>
         </div>
 
     </footer>
