--- a/pagina principal/index.html
+++ b/pagina principal/index.html
@@ -108,7 +108,7 @@
 
         <div class="footer-content">
             <img class="img-footer" src="assets/logo.png" width="200px" height="50px" alt="Logo">
-            <p id="p-footer">Desenvolvido pela <strong>Squad 2</strong> como projeto final para o M2 para a <a href="https://programadoresdoamanha.org/" target="_blank">Programadores do Amanhã</a></p>
+            <p id="p-footer">Desenvolvido pela <strong>Squad 2</strong> como projeto final do M2 para a <a href="https://programadoresdoamanha.org/" target="_blank">Programadores do Amanhã</a></p>
         </div>
 
     </footer>
