changing folders and directories

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <button id="btn-saiba-mais">Saiba mais</button>
             </div>
 
-            <img id="img-section-onu" src="/pagina principal/assets/ODS-ONU.png"  width="700px" alt="ODS (ONU)">
+            <img id="img-section-onu" src="assets/ODS-ONU.png"  width="700px" alt="ODS (ONU)">
 
         </section>
        
@@ -88,7 +88,7 @@
             <section class="section-3">
             
                 <p id="p-section-3">A energia solar é vital para pessoas, oferecendo uma fonte de energia limpa e acessível. Com painéis solares, famílias podem reduzir custos energéticos, liberando recursos para outras necessidades. Além de economizar dinheiro, a independência energética proporcionada promove a resiliência das comunidades. A energia solar também contribui para a preservação do meio ambiente, reduzindo emissões de gases de efeito estufa. Investir nessa tecnologia é essencial para um futuro sustentável e equitativo.</p>
-                <img  id="img-container" src="/pagina principal/assets/img-2.svg" width="500px" alt="Imagem Animada">
+                <img  id="img-container" src="assets/img-2.svg" width="500px" alt="Imagem Animada">
             </section>
 
         </div>
