--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <nav class="list-nav">
 
-            <a href="http://127.0.0.1:5500/pagina%20principal/index.html"><img src="assets/logo.png" class="img-logo-header" width="300px" alt="Logo"></a> 
+            <a href="http://127.0.0.1:5500/index.html"><img src="assets/logo.png" class="img-logo-header" width="300px" alt="Logo"></a> 
 
             <li><a href="#"></a><button class="btn-info-nav">Sobre Nós</button></li>
             <li><a href="http://127.0.0.1:5500/pagina%20cadastro/cadastro.html"><button class="btn-info-nav">Seja Voluntário</button></a></li>
@@ -110,7 +110,7 @@
     <footer>
 
         <div class="footer-content">
-            <a href="http://127.0.0.1:5500/pagina%20principal/index.html"><img class="img-footer" src="assets/logo.png" width="200px" height="50px" alt="Logo"></a>
+            <a href="http://127.0.0.1:5500/index.html"><img class="img-footer" src="assets/logo.png" width="200px" height="50px" alt="Logo"></a>
             <p id="p-footer">Desenvolvido pela <strong>Squad 2</strong> como projeto final do M2 para a <a href="https://programadoresdoamanha.org/" target="_blank">Programadores do Amanhã</a></p>
         </div>
 
