--- a/pagina cadastro/cadastro.html
+++ b/pagina cadastro/cadastro.html
@@ -22,7 +22,7 @@
 
         <nav class="list-nav">
 
-            <a href="http://127.0.0.1:5500/index.html"><img class="img-logo-header" src="../assets/logo.png" width="300px" alt="Logo"></a>
+            <a href="../index.html"><img class="img-logo-header" src="../assets/logo.png" width="300px" alt="Logo"></a>
 
             <li><button class="btn-more-info">Sobre Nós</button></li>
 
@@ -98,7 +98,7 @@
 
         <div class="footer-content">
 
-            <a href="http://127.0.0.1:5500/index.html"><img class="img-footer" src="../assets/logo.png" width="200px" height="50px" alt="Logo"></a>
+            <a href="../index.html"><img class="img-footer" src="../assets/logo.png" width="200px" height="50px" alt="Logo"></a>
             <p id="p-footer">Desenvolvido pela <strong>Squad 2</strong> como projeto final do M2 para a <a
             href="https://programadoresdoamanha.org/" target="_blank">Programadores do Amanhã</a></p>
 
