changing directories css page

--- a/pagina cadastro/cadastro.html
+++ b/pagina cadastro/cadastro.html
@@ -6,9 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brilha Sol</title>
-    <link rel="stylesheet" href="/pagina cadastro/css/cabecalho.css">
-    <link rel="stylesheet" href="/pagina cadastro/css/cadastro.css">
-    <link rel="stylesheet" href="/pagina cadastro/css/darkMode.css">
+    <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/cadastro.css">
+    <link rel="stylesheet" href="css/darkMode.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="shortcut icon" href="/pagina principal/assets/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
