changing directories js

--- a/pagina cadastro/cadastro.html
+++ b/pagina cadastro/cadastro.html
@@ -108,9 +108,9 @@
 
 
     <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.js"></script>
-    <script src="/pagina cadastro/js/cadastro.js"></script>
+    <script src="js/cadastro.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js"></script>
-    <script src="/pagina cadastro/js/darkMode.js"></script>
+    <script src="js/darkMode.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js"></script>
     <script src="https://kit.fontawesome.com/998c60ef77.js" crossorigin="anonymous"></script>
 
