add: adicionando link da pagina sobre nos

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
             <a href="index.html"><img src="assets/logo.png" class="img-logo-header" width="300px" alt="Logo"></a> 
 
-            <li><a href="#"></a><button class="btn-info-nav">Sobre Nós</button></li>
+            <li><a href="pagina sobre nos/sobre-nos.html"><button class="btn-info-nav">Sobre Nós</button></a></li>
             <li><a href="pagina cadastro/cadastro.html"><button class="btn-info-nav">Seja Voluntário</button></a></li>
             <li><a href="#"></a><button class="btn-info-nav">Saiba Mais</button></li>
 
@@ -53,7 +53,7 @@
             <p id="p-section-onu">A transição energética implica mudanças significativas na produção e utilização de energia que oferecem grandes oportunidades para o desenvolvimento social e econômico. Estas mudanças podem não só mitigar a crise climática, mas também promover medidas de adaptação para os mais afetados, corrigir injustiças energéticas e melhorar a qualidade de vida dos cidadãos. A principal causa da  crise climática em todo o mundo é a produção de energia a partir de combustíveis fósseis. 
             </p>
             
-            <button class="btn-sobre-nos">Sobre nós</button>
+            <a href="pagina sobre nos/sobre-nos.html"><button class="btn-sobre-nos">Sobre nós</button></a>
 
         </section>
 
