add: linkando pagina sobre nos ao cadastro

--- a/pagina cadastro/cadastro.html
+++ b/pagina cadastro/cadastro.html
@@ -24,7 +24,7 @@
 
             <a href="../index.html"><img class="img-logo-header" src="../assets/logo.png" width="300px" alt="Logo"></a>
 
-            <li><button class="btn-more-info">Sobre Nós</button></li>
+            <li><a href="../pagina sobre nos/sobre-nos.html"><button class="btn-more-info">Sobre Nós</button></a></li>
 
             <li><button class="btn-more-info">Saiba mais</button></li>
 
