add: adding font adress

--- a/pagina onu/pagina-onu.html
+++ b/pagina onu/pagina-onu.html
@@ -7,6 +7,8 @@
     <title>Brilha Sol</title>
     <link rel="stylesheet" href="css/pagina-onu.css">
     <link rel="shortcut icon" href="../projeto-final-m2/assets/favicon.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     
 </head>
 
