add: organizing indentation, responsiveness, html, css and js elements

--- a/pagina cadastro/cadastro.html
+++ b/pagina cadastro/cadastro.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/cadastro.css">
     <link rel="stylesheet" href="css/darkMode.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
-    <link rel="shortcut icon" href="/pagina principal/assets/favicon.ico">
+    <link rel="shortcut icon" href="../assets/favicon.ico">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>
@@ -28,7 +28,7 @@
 
             <li><a href="../pagina sobre nos/sobre-nos.html"><button class="btn-more-info">Sobre Nós</button></a></li>
 
-            <li><a href="../pagina saiba mais/pagina-saiba-mais.html"><button class="btn-more-info">Saiba mais</button></a></li>
+            <li><a href="../pagina saiba mais/pagina-saiba-mais.html"><button class="btn-more-info">Saiba Mais</button></a></li>
 
             <section class="list-social">
 
@@ -59,9 +59,11 @@
                 <input type="checkbox" class="checkbox" id="chk">
 
                 <label class="label" for="chk">
+
                     <i class="fas fa-moon"></i>
                     <i class="fas fa-sun"></i>
                   <div class="ball"></div>
+                  
                 </label>
           
             </div>
